tests/ui/type/type-ascription-with-fn-call.stderr
error: statements are terminated with a semicolon
  --> $DIR/type-ascription-with-fn-call.rs:3:10
   |
LL |     f()  :
   |          ^
   |
   = note: if you meant to annotate an expression with a type, the type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>
help: use a semicolon instead
   |
LL -     f()  :
LL +     f()  ;
   |

error: aborting due to 1 previous error

